first pass at a functioning vacation calculator.  Just a CLI app for now

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # Dependencies
 .psci_modules
+.spago
 bower_components
 node_modules
 
 # Generated files
 .psci
+.psa-stash
+.psc-ide-port
+.purs-repl
 output
+
+#ide
+.vscode
+.ide_modules
