--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "spago run --purs-args \"--stash --censor-lib\"",
     "ps": "spago build --purs-args \"--stash --censor-lib\"",
     "ps-ide": "spago build --purs-args \"-o .ide_modules/\"",
+    "format": "purs-tidy format-in-place src/",
     "test": "spago test --purs-args \"--stash --censor-lib\""
   },
   "repository": {
@@ -26,5 +27,8 @@
     "purescript": "^0.14.4",
     "purescript-psa": "^0.8.2",
     "spago": "^0.20.3"
+  },
+  "dependencies": {
+    "purs-tidy": "^0.6.2"
   }
 }
