--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "start": "node ./release/index.js",
+    "start-dev": "spago run -m Vacate.Backend.Main --purs-args \"--stash --censor-lib --censor-codes=ImplicitQualifiedImportReExport\"",
     "ps": "spago build --purs-args \"--stash --censor-lib --censor-codes=ImplicitQualifiedImportReExport\"",
-    "ps-ide": "spago build --purs-args \"-o .ide_modules/ --censor-lib --censor-codes=ImplicitQualifiedImportReExport\"",
     "watch-ps": "spago build --watch --purs-args \"--stash --censor-lib --censor-codes=ImplicitQualifiedImportReExport\"",
     "test": "spago test --purs-args \"--stash --censor-lib --censor-codes=ImplicitQualifiedImportReExport\"",
     "clean": "rm -r output/Vacate*",
@@ -38,6 +38,9 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.2",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
