--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
+    "@mui/x-data-grid": "^5.10.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "date-fns": "^2.28.0",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
