--- a/.github/workflows/main_duke-vacations.yml
+++ b/.github/workflows/main_duke-vacations.yml
@@ -31,7 +31,10 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: |
+            dist
+            release
+            package.json
 
   deploy:
     runs-on: ubuntu-latest
