make sure webpack can build

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,3 +30,8 @@ jobs:
       - name: test
         run: |
           npm run test
+  
+      - name: verify build
+        run: |
+          npm run build
+    
